--- a/settings.ini
+++ b/settings.ini
@@ -6,3 +6,8 @@ ch_ava = 1161581896694775908
 news = 1037032090228773005
 chat = 1038151796180402257
 ava_id = 415922221157187615
+
+[Guild_name]
+news_name = News
+chat_name = Chat
+log_name = log
